unpackaged/main/default/objects/Family_Members__c/Family_Members__c.object-meta.xml
<CustomObject>
    <label>Family Members</label>
    <nameField>
        <displayFormat>FM - {000000}</displayFormat>
        <label>Family Members Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>