unpackaged/main/default/objects/Family_Members__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Family Members</relationshipLabel>
    <relationshipName>Family_Members1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>