unpackaged/main/default/objects/Family_Members__c/fields/Family_Member__c.field-meta.xml
<CustomField>
    <fullName>Family_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Family Members (Family Member)</relationshipLabel>
    <relationshipName>Family_Members</relationshipName>
    <type>Lookup</type>
</CustomField>