unpackaged/main/default/objects/Family_Members__c/fields/Family_Member_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_Full_Name__c</fullName>
    <formula>Family_Member__r.FirstName &amp; " " &amp; Family_Member__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Member Full Name</label>
    <type>Text</type>
</CustomField>