unpackaged/main/default/objects/Family_Members__c/fields/Realationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Realationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aunt</fullName>
            </value>
            <value>
                <fullName>Boyfriend</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Brother-in-law</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>Daughter-in-law</fullName>
            </value>
            <value>
                <fullName>Ex-Spouse</fullName>
            </value>
            <value>
                <fullName>Family Staff</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Father-in-law</fullName>
            </value>
            <value>
                <fullName>Fiance</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Girlfriend</fullName>
            </value>
            <value>
                <fullName>Godchild</fullName>
            </value>
            <value>
                <fullName>Godparent</fullName>
            </value>
            <value>
                <fullName>Grandchild</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Half-sibling</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Mother-in-law</fullName>
            </value>
            <value>
                <fullName>Nephew</fullName>
            </value>
            <value>
                <fullName>Niece</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>Sister-in-law</fullName>
            </value>
            <value>
                <fullName>Son-in-law</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Step-child</fullName>
            </value>
            <value>
                <fullName>Step-parent</fullName>
            </value>
            <value>
                <fullName>Step-sibling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>